@startuml

skinparam sequenceMessageAlign center
title TO START THE NEXT SPRINT OF A PROJECT IN THE WEB UI
legend top
US031 - As Project Manager, I want to start the next sprint of a project in the web UI.
end legend


class SprintWebController {
- sprintStatusChangeService
+ changeStatus(sprintStatusChangeDto)
}

class SprintStatusChangeService {
- iSprintRepository
+ changeStatus(sprintStatusChangeDto)
- openSprint(sprint)
}

interface ISprintRepository {
+ findById(sprintId)
+ existsByStatus(sprintStatus)
}

class SprintRepository {
- sprints
+ findById(sprintId)
+ existsByStatus(sprintStatus)
}


class Sprint {
- sprintId
- status
+ changeStatus(status)
+ hasStatus(status)
}

class SprintStatusChangeDto {
+ sprintId
+ status
}

SprintWebController ..> SprintStatusChangeDto: uses
SprintWebController <.. SprintStatusChangeService: is injected
SprintStatusChangeService <.. ISprintRepository: is injected
ISprintRepository <|.. SprintRepository: implements
SprintRepository --> Sprint: has


@enduml